--- a/index.html
+++ b/index.html
@@ -9,8 +9,34 @@
 </head>
 <body class="page">
     <header class="header">
-        <img class="header__logo" src="images/logo-mesto.png" alt="Логотип Место"/>
+      <img class="header__logo" src="images/logo-mesto.png" alt="Логотип Место"/>
     </header>
+    <main class="content">
+      <section class="profile">
+        <div class="profile__block">
+          <img class="profile__avatar" src="images/Avatar.png" alt="Фото автора"/>
+          <div class="profile-intro">
+            <h1 class="profile-intro__title">Жак-Ив Кусто</h1>
+            <button class="profile-intro__edit-button"></button>
+            <p class="profile-intro__sabtitle">Исследователь океана</p>    
+          </div>
+        </div>
+          <button class="profile__add-button"></button>
+      </section>
+
+      <section class="cards">
+        <ul class="cards__list">
+          <li class="card">
+            <img class="card__image" src="/images/karachaevsk.jpg" alt="Фото Карачаевск"/>
+            <div class="card__group">
+              <h2 class="card__title">Карачаевск</h2>
+              <button class="card__heart"></button>
+            </div>
+          </li>
+        </ul>
+      </section>
+
+    </main>
     
 </body>
 </html>
