feat: Создать Cards

--- a/index.html
+++ b/index.html
@@ -27,7 +27,42 @@
       <section class="cards">
         <ul class="cards__list">
           <li class="card">
-            <img class="card__image" src="/images/karachaevsk.jpg" alt="Фото Карачаевск"/>
+            <img class="card__image" src="images/karachaevsk.jpg" alt="Фото Карачаевск"/>
+            <div class="card__group">
+              <h2 class="card__title">Карачаевск</h2>
+              <button class="card__heart"></button>
+            </div>
+          </li>
+          <li class="card">
+            <img class="card__image" src="images/Elbrus.png" alt="Фото Эльбрус"/>
+            <div class="card__group">
+              <h2 class="card__title">Гора Эльбрус</h2>
+              <button class="card__heart"></button>
+            </div>
+          </li>
+          <li class="card">
+            <img class="card__image" src="images/dombay.png" alt="Фото Домбай"/>
+            <div class="card__group">
+              <h2 class="card__title">Домбай</h2>
+              <button class="card__heart"></button>
+            </div>
+          </li>
+          <li class="card">
+            <img class="card__image" src="images/karachaevsk.jpg" alt="Фото Карачаевск"/>
+            <div class="card__group">
+              <h2 class="card__title">Карачаевск</h2>
+              <button class="card__heart"></button>
+            </div>
+          </li>
+          <li class="card">
+            <img class="card__image" src="images/karachaevsk.jpg" alt="Фото Карачаевск"/>
+            <div class="card__group">
+              <h2 class="card__title">Карачаевск</h2>
+              <button class="card__heart"></button>
+            </div>
+          </li>
+          <li class="card">
+            <img class="card__image" src="images/karachaevsk.jpg" alt="Фото Карачаевск"/>
             <div class="card__group">
               <h2 class="card__title">Карачаевск</h2>
               <button class="card__heart"></button>
