--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
       </section>
 
     </main>
+    <footer class="footer">
+      <p class="footer__copyright">© 2020 Mesto Russia</p>
+    </footer>
+    <div class="popup">
+      <div class=""
+    </div>
     
 </body>
 </html>
