--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
           <img class="profile__avatar" src="images/Avatar.png" alt="Фото автора"/>
           <div class="profile-intro">
             <h1 class="profile-intro__title">Жак-Ив Кусто</h1>
-            <button class="profile-intro__edit-button"></button>
+            <button class="profile-intro__edit-button button-hover"></button>
             <p class="profile-intro__sabtitle">Исследователь океана</p>    
           </div>
         </div>
-          <button class="profile__add-button"></button>
+          <button class="profile__add-button button-hover"></button>
       </section>
 
       <section class="cards">
@@ -30,42 +30,42 @@
             <img class="card__image" src="images/karachaevsk.jpg" alt="Фото Карачаевск"/>
             <div class="card__group">
               <h2 class="card__title">Карачаевск</h2>
-              <button class="card__heart"></button>
+              <button class="card__heart button-hover"></button>
             </div>
           </li>
           <li class="card">
             <img class="card__image" src="images/Elbrus.png" alt="Фото Эльбрус"/>
             <div class="card__group">
               <h2 class="card__title">Гора Эльбрус</h2>
-              <button class="card__heart"></button>
+              <button class="card__heart button-hover"></button>
             </div>
           </li>
           <li class="card">
             <img class="card__image" src="images/dombay.png" alt="Фото Домбай"/>
             <div class="card__group">
               <h2 class="card__title">Домбай</h2>
-              <button class="card__heart"></button>
+              <button class="card__heart button-hover"></button>
             </div>
           </li>
           <li class="card">
             <img class="card__image" src="images/karachaevsk.jpg" alt="Фото Карачаевск"/>
             <div class="card__group">
               <h2 class="card__title">Карачаевск</h2>
-              <button class="card__heart"></button>
+              <button class="card__heart button-hover"></button>
             </div>
           </li>
           <li class="card">
             <img class="card__image" src="images/karachaevsk.jpg" alt="Фото Карачаевск"/>
             <div class="card__group">
               <h2 class="card__title">Карачаевск</h2>
-              <button class="card__heart"></button>
+              <button class="card__heart button-hover"></button>
             </div>
           </li>
           <li class="card">
             <img class="card__image" src="images/karachaevsk.jpg" alt="Фото Карачаевск"/>
             <div class="card__group">
               <h2 class="card__title">Карачаевск</h2>
-              <button class="card__heart"></button>
+              <button class="card__heart button-hover"></button>
             </div>
           </li>
         </ul>
@@ -76,7 +76,13 @@
       <p class="footer__copyright">© 2020 Mesto Russia</p>
     </footer>
     <div class="popup">
-      <div class=""
+      <form class="popup__container">
+        <button class="popup__close button-hover"></button>
+        <h3 class="popup__title">Редактировать профиль</h3>
+        <input type="text" placeholder="Жак-Ив Кусто" class="popup__field">
+        <input type="text" placeholder="Исследователь океана" class="popup__field">
+        <button class="popup__save-button button-hover">Сохранить</button>
+      </form>
     </div>
     
 </body>
