--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <img class="profile__avatar" src="images/Avatar.png" alt="Фото автора"/>
           <div class="profile-intro">
             <h1 class="profile-intro__title">Жак-Ив Кусто</h1>
-            <button class="profile-intro__edit-button button-hover"></button>
+            <button class="profile-intro__edit-button button-hover "></button>
             <p class="profile-intro__sabtitle">Исследователь океана</p>    
           </div>
         </div>
@@ -30,7 +30,7 @@
             <img class="card__image" src="images/karachaevsk.jpg" alt="Фото Карачаевск"/>
             <div class="card__group">
               <h2 class="card__title">Карачаевск</h2>
-              <button class="card__heart button-hover"></button>
+              <button class="card__heart button-hover card__heart_active"></button>
             </div>
           </li>
           <li class="card">
@@ -75,15 +75,15 @@
     <footer class="footer">
       <p class="footer__copyright">© 2020 Mesto Russia</p>
     </footer>
-    <div class="popup">
+    <div class="popup popup_opened">
       <form class="popup__container">
         <button class="popup__close button-hover"></button>
         <h3 class="popup__title">Редактировать профиль</h3>
-        <input type="text" placeholder="Жак-Ив Кусто" class="popup__field">
-        <input type="text" placeholder="Исследователь океана" class="popup__field">
-        <button class="popup__save-button button-hover">Сохранить</button>
+        <input type="text" placeholder="Жак-Ив Кусто" class="popup__field popup__field_with_name">
+        <input type="text" placeholder="Исследователь океана" class="popup__field popup__field_with_job">
+        <button class="popup__save-button button-hover" data-dismiss="modal">Сохранить</button>
       </form>
     </div>
-    
+    <script src="./scripts/script.js"></script>
 </body>
 </html>
