--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body class="page">
     <header class="header">
-      <img class="header__logo" src="images/logo-mesto.png" alt="Логотип Место"/>
+      <img class="header__logo" src="./images/logo.svg" alt="Логотип Место"/>
     </header>
     <main class="content">
       <section class="profile">
         <div class="profile__block">
-          <img class="profile__avatar" src="images/Avatar.png" alt="Фото автора"/>
+          <img class="profile__avatar" src="./images/Avatar.png" alt="Фото автора"/>
           <div class="profile-intro">
             <h1 class="profile-intro__title">Жак-Ив Кусто</h1>
             <button class="profile-intro__edit-button button-hover "></button>
@@ -27,42 +27,42 @@
       <section class="cards">
         <ul class="cards__list">
           <li class="card">
-            <img class="card__image" src="images/karachaevsk.jpg" alt="Фото Карачаевск"/>
+            <img class="card__image" src="./images/karachaevsk.jpg" alt="Фото Карачаевск"/>
             <div class="card__group">
               <h2 class="card__title">Карачаевск</h2>
               <button class="card__heart button-hover card__heart_active"></button>
             </div>
           </li>
           <li class="card">
-            <img class="card__image" src="images/Elbrus.png" alt="Фото Эльбрус"/>
+            <img class="card__image" src="./images/Elbrus.png" alt="Фото Эльбрус"/>
             <div class="card__group">
               <h2 class="card__title">Гора Эльбрус</h2>
               <button class="card__heart button-hover"></button>
             </div>
           </li>
           <li class="card">
-            <img class="card__image" src="images/dombay.png" alt="Фото Домбай"/>
+            <img class="card__image" src="./images/dombay.png" alt="Фото Домбай"/>
             <div class="card__group">
               <h2 class="card__title">Домбай</h2>
               <button class="card__heart button-hover"></button>
             </div>
           </li>
           <li class="card">
-            <img class="card__image" src="images/karachaevsk.jpg" alt="Фото Карачаевск"/>
+            <img class="card__image" src="./images/karachaevsk.jpg" alt="Фото Карачаевск"/>
             <div class="card__group">
               <h2 class="card__title">Карачаевск</h2>
               <button class="card__heart button-hover"></button>
             </div>
           </li>
           <li class="card">
-            <img class="card__image" src="images/karachaevsk.jpg" alt="Фото Карачаевск"/>
+            <img class="card__image" src="./images/karachaevsk.jpg" alt="Фото Карачаевск"/>
             <div class="card__group">
               <h2 class="card__title">Карачаевск</h2>
               <button class="card__heart button-hover"></button>
             </div>
           </li>
           <li class="card">
-            <img class="card__image" src="images/karachaevsk.jpg" alt="Фото Карачаевск"/>
+            <img class="card__image" src="./images/karachaevsk.jpg" alt="Фото Карачаевск"/>
             <div class="card__group">
               <h2 class="card__title">Карачаевск</h2>
               <button class="card__heart button-hover"></button>
@@ -70,12 +70,13 @@
           </li>
         </ul>
       </section>
-
     </main>
+
     <footer class="footer">
       <p class="footer__copyright">© 2020 Mesto Russia</p>
     </footer>
-    <div class="popup popup_opened">
+
+    <section class="popup popup_opened">
       <form class="popup__container">
         <button class="popup__close button-hover"></button>
         <h3 class="popup__title">Редактировать профиль</h3>
@@ -83,7 +84,8 @@
         <input type="text" placeholder="Исследователь океана" class="popup__field popup__field_with_job">
         <button class="popup__save-button button-hover" data-dismiss="modal">Сохранить</button>
       </form>
-    </div>
+    </section>
+
     <script src="./scripts/script.js"></script>
 </body>
 </html>
