--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <img class="card__image" src="./images/karachaevsk.jpg" alt="Фото Карачаевск"/>
             <div class="card__group">
               <h2 class="card__title">Карачаевск</h2>
-              <button class="card__heart button-hover card__heart_active"></button>
+              <button class="card__heart button-hover"></button>
             </div>
           </li>
           <li class="card">
