--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <p class="profile-intro__sabtitle">Исследователь океана</p>    
           </div>
         </div>
-          <button class="profile__add-button button-hover"></button>
+          <button type="button" class="profile__add-button button-hover"></button>
       </section>
 
       <section class="cards">
@@ -79,10 +79,10 @@
     <section class="popup">
       <div class="popup__container">
         <button type="button" class="popup__close button-hover"></button>
-        <h1 class="popup__title">Редактировать профиль</h1>
+        <h2 class="popup__title">Редактировать профиль</h2>
         <form name="editProfile"> 
-          <input type="text" name="name" placeholder="Имя" value="Жак-Ив Кусто" class="popup__field popup__field_with_name">
-          <input type="text" name="job" placeholder="Статус" value="Исследователь океана"  class="popup__field popup__field_with_job">
+          <input type="text" name="name" placeholder="Имя"  class="popup__field popup__field_with_name">
+          <input type="text" name="job" placeholder="Статус" class="popup__field popup__field_with_job">
           <button type="submit" class="popup__save-button" data-dismiss="modal">Сохранить</button>
         </form>
       </div>
