--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <div class="popup__container">
         <button type="button" class="popup__close button-hover"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form name="editProfile"> 
+        <form name="editProfile" class="popup__form">
           <input type="text" name="name" placeholder="Имя"  class="popup__field popup__field_with_name">
           <input type="text" name="job" placeholder="Статус" class="popup__field popup__field_with_job">
           <button type="submit" class="popup__save-button" data-dismiss="modal">Сохранить</button>
