--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <ul class="cards__list">
           <li class="card">
             <img class="card__image" src="./images/karachaevsk.jpg" alt="Фото Карачаевск"/>
+            <button class="card__basket button-hover"></button>
             <div class="card__group">
               <h2 class="card__title">Карачаевск</h2>
               <button type="button" class="card__heart"></button>
