--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="popup__container popup__container_type_show-cards">
       <button type="button" class="popup__close button-hover"></button>
         <figure class="popup__show-card">
-          <img class="popup__image" src="" alt="Контентное изображение"/>
+          <img class="popup__image" src="#" alt="Контентное изображение"/>
           <figcaption class="popup__caption"></figcaption>
         </figure>
       </div>
