--- a/index.html
+++ b/index.html
@@ -39,9 +39,12 @@
       <div class="popup__container">
         <button type="button" class="popup__close button-hover"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form name="editProfile" class="popup__form">
-          <input type="text" name="name" placeholder="Имя"  class="popup__field popup__field_with_name">
-          <input type="text" name="job" placeholder="Статус" class="popup__field popup__field_with_job">
+        <form name="editProfile" class="popup__form" novalidate>
+          <input id="profileName-input" type="text" name="name" placeholder="Имя"  class="popup__field popup__field_with_name" minlength="2" maxlength="30" required>
+          <!-- подумать над названием класса profileName-input-error и т.п.-->
+          <span class="profileName-input-error popup__field-error"></span>
+          <input id="profileJob-input" type="text" name="job" placeholder="Статус" class="popup__field popup__field_with_job" minlength="2" maxlength="30" required>
+          <span class="profileJob-input-error popup__field-error"></span>
           <button type="submit" class="popup__save-button" data-dismiss="modal">Сохранить</button>
         </form>
       </div>
@@ -51,9 +54,11 @@
       <div class="popup__container">
         <button type="button" class="popup__close button-hover"></button>
         <h2 class="popup__title">Новое место</h2>
-        <form name="editProfile" class="popup__form popup__form-add-card">
-          <input type="text" name="name" placeholder="Название"  class="popup__field popup__field_with_card-name">
-          <input type="text" name="link" placeholder="Ссылка на картинку" class="popup__field popup__field_with_card-link">
+        <form name="addCard" class="popup__form popup__form-add-card" novalidate>
+          <input id="addCardName-input" type="text" name="name" placeholder="Название"  class="popup__field popup__field_with_card-name" minlength="2" maxlength="30" required>
+          <span class="addCardName-input-error popup__field-error"></span>
+          <input id="addCardUrl-input" type="url" name="link" placeholder="Ссылка на картинку" class="popup__field popup__field_with_card-link" required>
+          <span class="addCardUrl-input-error popup__field-error"></span>
           <button type="submit" class="popup__save-button" data-dismiss="modal">Сохранить</button>
         </form>
       </div>
@@ -82,5 +87,6 @@
 
 
     <script src="./scripts/script.js"></script>
+    <script src="./scripts/validate.js"></script>
 </body>
 </html>
