--- a/index.html
+++ b/index.html
@@ -1,27 +1,34 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="pages/index.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="pages/index.css" />
     <title>Место</title>
-</head>
-<body class="page">
+  </head>
+  <body class="page">
     <header class="header">
-      <img class="header__logo" src="./images/logo.svg" alt="Логотип Место"/>
+      <img class="header__logo" src="./images/logo.svg" alt="Логотип Место" />
     </header>
     <main class="content">
       <section class="profile">
         <div class="profile__block">
-          <img class="profile__avatar" src="./images/Avatar.png" alt="Фото автора"/>
+          <img
+            class="profile__avatar"
+            src="./images/Avatar.png"
+            alt="Фото автора"
+          />
           <div class="profile-intro">
             <h1 class="profile-intro__title">Жак-Ив Кусто</h1>
-            <button type="button" class="profile-intro__edit-button button-hover "></button>
-            <p class="profile-intro__sabtitle">Исследователь океана</p>    
+            <button
+              type="button"
+              class="profile-intro__edit-button button-hover"
+            ></button>
+            <p class="profile-intro__sabtitle">Исследователь океана</p>
           </div>
         </div>
-          <button type="button" class="profile__add-button button-hover"></button>
+        <button type="button" class="profile__add-button button-hover"></button>
       </section>
 
       <section class="cards">
@@ -40,12 +47,32 @@
         <button type="button" class="popup__close button-hover"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
         <form name="editProfile" class="popup__form" novalidate>
-          <input id="profileName-input" type="text" name="name" placeholder="Имя"  class="popup__field popup__field_with_name" minlength="2" maxlength="30" required>
+          <input
+            id="profileName-input"
+            type="text"
+            name="name"
+            placeholder="Имя"
+            class="popup__field popup__field_with_name"
+            minlength="2"
+            maxlength="30"
+            required
+          />
           <!-- подумать над названием класса profileName-input-error и т.п.-->
           <span class="profileName-input-error popup__field-error"></span>
-          <input id="profileJob-input" type="text" name="job" placeholder="Статус" class="popup__field popup__field_with_job" minlength="2" maxlength="30" required>
+          <input
+            id="profileJob-input"
+            type="text"
+            name="job"
+            placeholder="Статус"
+            class="popup__field popup__field_with_job"
+            minlength="2"
+            maxlength="30"
+            required
+          />
           <span class="profileJob-input-error popup__field-error"></span>
-          <button type="submit" class="popup__save-button" data-dismiss="modal">Сохранить</button>
+          <button type="submit" class="popup__save-button" data-dismiss="modal">
+            Сохранить
+          </button>
         </form>
       </div>
     </section>
@@ -54,39 +81,59 @@
       <div class="popup__container">
         <button type="button" class="popup__close button-hover"></button>
         <h2 class="popup__title">Новое место</h2>
-        <form name="addCard" class="popup__form popup__form-add-card" novalidate>
-          <input id="addCardName-input" type="text" name="name" placeholder="Название"  class="popup__field popup__field_with_card-name" minlength="2" maxlength="30" required>
+        <form
+          name="addCard"
+          class="popup__form popup__form-add-card"
+          novalidate
+        >
+          <input
+            id="addCardName-input"
+            type="text"
+            name="name"
+            placeholder="Название"
+            class="popup__field popup__field_with_card-name"
+            minlength="2"
+            maxlength="30"
+            required
+          />
           <span class="addCardName-input-error popup__field-error"></span>
-          <input id="addCardUrl-input" type="url" name="link" placeholder="Ссылка на картинку" class="popup__field popup__field_with_card-link" required>
+          <input
+            id="addCardUrl-input"
+            type="url"
+            name="link"
+            placeholder="Ссылка на картинку"
+            class="popup__field popup__field_with_card-link"
+            required
+          />
           <span class="addCardUrl-input-error popup__field-error"></span>
-          <button type="submit" class="popup__save-button" data-dismiss="modal">Сохранить</button>
+          <button type="submit" class="popup__save-button" data-dismiss="modal">
+            Сохранить
+          </button>
         </form>
       </div>
     </section>
 
     <section class="popup popup_type_show-cards">
       <div class="popup__container popup__container_type_show-cards">
-      <button type="button" class="popup__close button-hover"></button>
+        <button type="button" class="popup__close button-hover"></button>
         <figure class="popup__show-card">
-          <img class="popup__image" src="#" alt="#"/>
+          <img class="popup__image" src="#" alt="#" />
           <figcaption class="popup__caption"></figcaption>
         </figure>
       </div>
     </section>
 
-     <template id="template-card">
-        <li class="card">
-          <div class="card__image"></div>
-          <button  type="button" class="card__basket button-hover"></button>
-          <div class="card__group">
-            <h2 class="card__title"></h2>
-            <button type="button" class="card__heart"></button>
-          </div>
-        </li>
-      </template>
+    <template id="template-card">
+      <li class="card">
+        <div class="card__image"></div>
+        <button type="button" class="card__basket button-hover"></button>
+        <div class="card__group">
+          <h2 class="card__title"></h2>
+          <button type="button" class="card__heart"></button>
+        </div>
+      </li>
+    </template>
 
-
-    <script type ="module" src="./scripts/script.js" defer></script>
- 
-</body>
+    <script type="module" src="./scripts/script.js" defer></script>
+  </body>
 </html>
