--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="pages/index.css" />
+    <link rel="stylesheet" href="./index.css" />
     <title>Место</title>
   </head>
   <body class="page">
@@ -134,6 +134,6 @@
       </li>
     </template>
 
-    <script type="module" src="./scripts/script.js" defer></script>
+    <script type="module" src="./pages/index.js" defer></script>
   </body>
 </html>
