--- a/src/index.html
+++ b/src/index.html
@@ -10,25 +10,27 @@
     <header class="header">
       <img
         class="header__logo"
-        src= "<%=require('./images/logo.svg')%>"
+        src="<%=require('./images/logo.svg')%>"
         alt="Логотип Место"
       />
     </header>
     <main class="content">
       <section class="profile">
         <div class="profile__block">
-          <img
-            class="profile__avatar"
-            src= "<%=require('./images/Avatar.png')%>"
-            alt="Фото автора"
-          />
+           <img
+              class="profile__avatar"
+               src="#"
+              alt="#"
+            />
+            <button class="profile__avatar-edit-button"></button>
+          </div>
           <div class="profile-intro">
-            <h1 class="profile-intro__title">Жак-Ив Кусто</h1>
+            <h1 class="profile-intro__title"></h1>
             <button
               type="button"
               class="profile-intro__edit-button button-hover"
             ></button>
-            <p class="profile-intro__sabtitle">Исследователь океана</p>
+            <p class="profile-intro__sabtitle"></p>
           </div>
         </div>
         <button type="button" class="profile__add-button button-hover"></button>
@@ -60,12 +62,11 @@
             maxlength="30"
             required
           />
-          <!-- подумать над названием класса profileName-input-error и т.п.-->
           <span class="profileName-input-error popup__field-error"></span>
           <input
             id="profileJob-input"
             type="text"
-            name="job"
+            name="about"
             placeholder="Статус"
             class="popup__field popup__field_with_job"
             minlength="2"
@@ -116,6 +117,49 @@
       </div>
     </section>
 
+
+    <!--Попап подтверждения удаления-->
+    <section class="popup popup_type_remove-cards">
+      <div class="popup__container">
+        <button type="button" class="popup__close button-hover"></button>
+        <h2 class="popup__title">Вы уверены?</h2>
+        <form
+          class="popup__form popup__remove-card"
+          novalidate
+        >
+          <button type="submit" class="popup__save-button" data-dismiss="modal">
+            Да
+          </button>
+        </form>
+      </div>
+    </section>
+
+    <!--Попап изменения аватара-->
+    <section class="popup popup_type_edit-avatar">
+      <div class="popup__container">
+        <button type="button" class="popup__close button-hover"></button>
+        <h2 class="popup__title">Обновить аватар</h2>
+        <form
+          name="avatar"
+          class="popup__form"
+          novalidate
+        >
+        <input
+            id="avatar-link"
+            type="url"
+            name="avatar"
+            placeholder="Ссылка на аватар"
+            class="popup__field"
+            required
+          />
+          <span class="avatar-link-error popup__field-error"></span>
+          <button type="submit" class="popup__save-button" data-dismiss="modal">
+            Да
+          </button>
+        </form>
+      </div>
+    </section>
+
     <section class="popup popup_type_show-cards">
       <div class="popup__container popup__container_type_show-cards">
         <button type="button" class="popup__close button-hover"></button>
@@ -132,7 +176,10 @@
         <button type="button" class="card__basket button-hover"></button>
         <div class="card__group">
           <h2 class="card__title"></h2>
-          <button type="button" class="card__heart"></button>
+          <div class=" card__heart-group">
+            <button type="button" class="card__heart"></button>
+            <div class="card__counter-likes">0</div>
+          </div>
         </div>
       </li>
     </template>
