--- a/src/index.html
+++ b/src/index.html
@@ -124,6 +124,7 @@
         <button type="button" class="popup__close button-hover"></button>
         <h2 class="popup__title">Вы уверены?</h2>
         <form
+        name="removeCard"
           class="popup__form popup__remove-card"
           novalidate
         >
